dashboard-handy-prod/deployment.yaml
# DASHBAORD HANDY PROD #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-handy-prod-deployment
  namespace: rhino-admin-prod
  labels:
    app: dashboard-handy-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dashboard-handy-prod
  template:
    metadata:
      labels:
        app: dashboard-handy-prod
    spec:
      containers:
      - name: dashboard-handy-prod
        image: southamerica-east1-docker.pkg.dev/diesel-talon-387022/dashboard-handy-prod/dashboard-handy-prod:5d9cf2f3666ee92608db5163a05f2ba22aa49d30
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "1048Mi"
            cpu: "1000m"
        ports:
        - containerPort: 80
